--- a/src/data/levels/02_Assembly/02_Now it's your turn/chat/es.yml
+++ b/src/data/levels/02_Assembly/02_Now it's your turn/chat/es.yml
@@ -21,8 +21,12 @@ othercommands:
 help:
   messages:
   - recuerda que antes de escribir en memoria, debes cargar el valor en [A]
-  - "y cuando escribes numeros literales, debes agregarles el prefijo #"
-  - "p. ej. si quieres cargar un $99, es `LDA #$99` en lugar de `LDA $99`"
-  - "(lo último cargaría en [A] lo que sea que esté en la dirección de memoria $0099)"
+  - por lo que es una operación de dos pasos
+  - <{LDA_STA.png}>
+  - "además, cuando escribes numeros literales, debes agregarles el prefijo #"
+  - "p. ej. si quieres cargar un $99 en [A], es `LDA #$99` en lugar de `LDA $99`"
+  - <{LDA_immediate.png}>
+  - "(de otra forma, cargaría en [A] lo que sea que esté en la dirección de memoria $0099)"
+  - <{LDA_memory.png}>
   responses:
   - gracias, voy a intentar [end]
