--- a/src/data/levels/02_Assembly/03_Reading from memory/chat/es.yml
+++ b/src/data/levels/02_Assembly/03_Reading from memory/chat/es.yml
@@ -21,6 +21,7 @@ read:
   messages:
   - "puedes pasarle una dirección de memoria a `LDX`, tan solo omitiendo el prefijo #"
   - p. ej. la instrucción `LDX $4080` cargará en [X] lo que sea que esté en la dirección de memoria $4080
+  - <{LDA_memory_ok.png}>
   responses:
   - ¿y después qué? 🤔 [then]
 
