Adding LDX_memory.png

--- a/src/data/levels/02_Assembly/03_Reading from memory/chat/en.yml
+++ b/src/data/levels/02_Assembly/03_Reading from memory/chat/en.yml
@@ -13,7 +13,7 @@ main:
   - so, with the `LDA` + `STA` combo, you can write to memory ✍️
   - "there are similar instructions that use the [X] and [Y] registers:"
   - "`LDX`, `STX`, `LDY`, and `STY`"
-  - we'll use the [X] variants now, just for fun
+  - we'll use the [X] variants now, just for fun 👾
   responses:
   - what if I want to <read> from memory? 📖 [read]
 
@@ -21,7 +21,7 @@ read:
   messages:
   - "you can pass a memory address to `LDX`, by just omitting the # prefix"
   - i.e. the instruction `LDX $4080` will load into [X] whatever value is in the memory address $4080
-  - <{LDA_memory_ok.png}>
+  - <{LDX_memory.png}>
   responses:
   - and then what? 🤔 [then]
 
