--- a/src/data/levels/02_Assembly/03_Reading from memory/chat/es.yml
+++ b/src/data/levels/02_Assembly/03_Reading from memory/chat/es.yml
@@ -13,7 +13,7 @@ main:
   - entonces, con el combo `LDA` + `STA` puedes escribir en memoria ✍️
   - "hay instrucciones similares que usan los registros [X] e [Y]:"
   - "`LDX`, `STX`, `LDY` y `STY`"
-  - ahora vamos a usar las variantes [X], solo por diversión
+  - ahora vamos a usar las variantes [X], solo por diversión 👾
   responses:
   - ¿qué pasa si quiero <leer> de la memoria? 📖 [read]
 
@@ -21,7 +21,7 @@ read:
   messages:
   - "puedes pasarle una dirección de memoria a `LDX`, tan solo omitiendo el prefijo #"
   - p. ej. la instrucción `LDX $4080` cargará en [X] lo que sea que esté en la dirección de memoria $4080
-  - <{LDA_memory_ok.png}>
+  - <{LDX_memory.png}>
   responses:
   - ¿y después qué? 🤔 [then]
 
