--- a/src/data/levels/02_Assembly/03_Reading from memory/chat/en.yml
+++ b/src/data/levels/02_Assembly/03_Reading from memory/chat/en.yml
@@ -89,7 +89,7 @@ exercise:
     });
   messages:
   - let's refactor the code 💡
-  - 📚  make it so it uses `ADC` instead of 3 incrementing instructions
-  - (remember to replace `LDX` and `STX` with `LDA` and `STA`)
-  - when you're ready, run the `test` command
+  - 📚  _-_make it so it uses `ADC` instead of 3 incrementing instructions_--_
+  - _-_(remember to replace `LDX` and `STX` with `LDA` and `STA`)_--_
+  - _-_when you're ready, run the `test` command_--_
   responses: []
