--- a/src/data/levels/02_Assembly/03_Reading from memory/chat/es.yml
+++ b/src/data/levels/02_Assembly/03_Reading from memory/chat/es.yml
@@ -89,7 +89,7 @@ exercise:
     });
   messages:
   - vamos a refactorizar el código 💡
-  - 📚  haz que use `ADC` en vez de 3 instrucciones de incremento
-  - (recuerda reemplazar `LDX` y `STX` por `LDA` y `STA`)
-  - cuando esté listo, ejecuta el comando `test`
+  - 📚  _-_haz que use `ADC` en vez de 3 instrucciones de incremento_--_
+  - _-_(recuerda reemplazar `LDX` y `STX` por `LDA` y `STA`)_--_
+  - _-_cuando esté listo, ejecuta el comando `test`_--_
   responses: []
