Fixes and formatting (substracting from, instead of 'to')

--- a/src/data/levels/02_Assembly/04_Flags/chat/en.yml
+++ b/src/data/levels/02_Assembly/04_Flags/chat/en.yml
@@ -77,6 +77,7 @@ flags:
   - it's a boolean (1-bit value) set by the processor
   - it gives information about the previous instruction
   - there are 6 flags, so they all live in a single byte
+  - (that byte is called <flags register>)
   - try running the code ⏩
   events:
   - end [carry]
@@ -110,9 +111,9 @@ exercise:
     });
   messages:
   - yup, there's a Zero Flag, which is set by all instructions to 1 when the result is zero
-  - 📚  without deleting the current code, try subtracting 4 to [A], with the `SBC` instruction
-  - it works the same as `ADC`, but it subtracts instead of adding
-  - after that instruction, the Zero Flag should be 1 😊
-  - when you're ready, run the `test` command
+  - 📚  _-_without deleting the current code, try subtracting 4 from [A], with the `SBC` instruction_--_
+  - _-_it works the same as `ADC`, but it subtracts instead of adding_--_
+  - _-_after that instruction, the Zero Flag should be 1 _--_😊
+  - _-_when you're ready, run the `test` command_--_
   responses:
   - ...carry
