--- a/src/data/levels/02_Assembly/04_Flags/chat/es.yml
+++ b/src/data/levels/02_Assembly/04_Flags/chat/es.yml
@@ -77,6 +77,7 @@ flags:
   - es un booleano (valor de 1 bit) que carga el procesador
   - da información sobre la instrucción anterior
   - hay 6 banderas, así que todas viven en un solo byte
+  - (ese byte se llama <registro de banderas>)
   - intenta ejecutar el código ⏩
   events:
   - end [carry]
@@ -110,9 +111,9 @@ exercise:
     });
   messages:
   - yep, está la Bandera Zero, que todas las instrucciones la ponen en 1 cuando el resultado es cero
-  - 📚  sin eliminar el código actual, intenta sustraer 4 a [A], con la instrucción `SBC`
-  - funciona igual que `ADC`, pero resta en lugar de sumar
-  - luego de la instrucción, la Bandera Zero debería estar en 1 😊
-  - cuando esté listo, ejecuta el comando `test`
+  - 📚  _-_sin eliminar el código actual, intenta sustraer 4 a [A], con la instrucción `SBC`_--_
+  - _-_funciona igual que `ADC`, pero resta en lugar de sumar_--_
+  - _-_luego de la instrucción, la Bandera Zero debería estar en 1 _--_😊
+  - _-_cuando esté listo, ejecuta el comando `test`_--_
   responses:
   - ...carry
