Adding BRK image

--- a/src/data/levels/02_Assembly/05_Branching/chat/en.yml
+++ b/src/data/levels/02_Assembly/05_Branching/chat/en.yml
@@ -119,4 +119,5 @@ help:
   - 🛑  for that, you can put a label at the very end of the code
   - and use a branch instruction to jump to it
   - or more simply, just use the `BRK` instruction, which halts the execution 😉
+  - <{BRK.png}>
   responses: []
