--- a/src/data/levels/02_Assembly/07_Addressing modes (2-3)/chat/en.yml
+++ b/src/data/levels/02_Assembly/07_Addressing modes (2-3)/chat/en.yml
@@ -40,6 +40,7 @@ zero2:
   messages:
   - this ended up writing $CD (the content of [A]) to $0062
   - which is the result of $60 + [X]
+  - <{STA_zeropagex.png}>
   - note that I hacked your Memory Viewer to show the zero page
   - you can check it out for yourself 👀
   - run the next two instructions ⏩
@@ -122,8 +123,8 @@ exercise:
     });
     {{Bottom}}.setDelay(0);
   messages:
-  - 📚  remove all the code
-  - build a program that screams through the memory addresses 😱
-  - that means, it writes $AA exactly 64 times from $4080 to $40BF
-  - as always, when you're ready, run the `test` command
+  - 📚  _-_remove all the code_--_
+  - _-_build a program that screams through the memory addresses _--_😱
+  - _-_that means, it writes $AA exactly 64 times from $4080 to $40BF_--_
+  - _-_as always, when you're ready, run the `test` command_--_
   responses: []
