--- a/src/data/levels/02_Assembly/10_Subroutines/chat/en.yml
+++ b/src/data/levels/02_Assembly/10_Subroutines/chat/en.yml
@@ -15,6 +15,7 @@ where:
   - well, `JSR` pushes the address of the next instruction (minus 1) onto the stack before jumping to the given location
   - then, `RTS` pops this address, adds 1 to it, and jumps to that location
   - the example code illustrates how both can be used together to create modular code 🗃️
+  - <{JSR_RTS.png}>
   responses:
   - (*) why didn't you use the label names? [label]
   - awesome! [awesome]
