--- a/src/data/levels/03_Cartridge/02_A broken emulator/chat/en.yml
+++ b/src/data/levels/03_Cartridge/02_A broken emulator/chat/en.yml
@@ -18,7 +18,7 @@ works:
   - I guess that's why they named it <BrokenNEEES>
   - you can try it anyway...
   - 💡  drag a ROM into the TV or use one of the games in 📁  ~/roms~
-  - (if you don't have any, go and play the <👾 > chapter!)
+  - (if you don't have any, go back and play the <👾 > chapter!)
   - you can launch ROMs with the `open` command
   responses:
   - (*) what bugs did you find? 🐞 [bugs]
