--- a/src/data/levels/03_Cartridge/02_A broken emulator/chat/es.yml
+++ b/src/data/levels/03_Cartridge/02_A broken emulator/chat/es.yml
@@ -18,7 +18,7 @@ works:
   - supongo que por eso lo llamaron <BrokenNEEES>
   - puedes probarlo de todos modos...
   - 💡  arrastra una ROM a la TV o usa uno de los juegos en 📁  ~/roms~
-  - (si no tienes ninguno, ¡ve y juega el capítulo <👾 >!)
+  - (si no tienes ninguno, ¡ve hacia atrás y juega el capítulo <👾 >!)
   - puedes lanzar ROMs con el comando `open`
   responses:
   - (*) ¿qué errores encontraste? 🐞 [bugs]
