--- a/src/data/levels/02_Assembly/04_Flags/chat/en.yml
+++ b/src/data/levels/02_Assembly/04_Flags/chat/en.yml
@@ -66,7 +66,7 @@ a4:
   - correct! ✔️
   - but the processor isn't actually dumb
   - it notifies the program that the value didn't fit
-  - by setting the Carry Flag to 1
+  - by setting the <Carry Flag> to 1
   responses:
   - what's a flag? 🏁 [flags]
 
