--- a/src/data/levels/02_Assembly/04_Flags/chat/es.yml
+++ b/src/data/levels/02_Assembly/04_Flags/chat/es.yml
@@ -66,7 +66,7 @@ a4:
   - ¡correcto! ✔️
   - pero en realidad el procesador no es tonto
   - le notifica al programa que el valor no calzó bien
-  - cargando la Bandera Carry en 1
+  - cargando la <Bandera Carry> en 1
   responses:
   - ¿qué es una bandera? 🏁 [flags]
 
