--- a/src/data/levels/03_Cartridge/01_Using JS modules/chat/es.yml
+++ b/src/data/levels/03_Cartridge/01_Using JS modules/chat/es.yml
@@ -5,7 +5,7 @@ main:
   messages:
   - vamos a empezar a programar en JavaScript
   - por cierto, tu computadora ha sido <actualizada>
-  - ahora puedes usar MÚLTIPLES archivos 🗃️ 📄 📁
+  - ahora puedes usar MÚLTIPLES archivos 🗃️ 📁
   - muy bueno, ¿no?
   responses:
   - es una funcionalidad bastante común [notcool]
