--- a/src/data/levels/03_Cartridge/04_Reading the header/chat/en.yml
+++ b/src/data/levels/03_Cartridge/04_Reading the header/chat/en.yml
@@ -71,6 +71,7 @@ nybble:
 understand:
   messages:
   - awesome 💪
+  - the first 16 bytes of the file represent the 🗣️  header
   - |-
     📚  _-_let's add a `header` property to the `Cartridge` class, with the following form:
     ```javascript {
